--- a/Proyecto-Final - HERNAN/index.html
+++ b/Proyecto-Final - HERNAN/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Proyecto-Final - HERNAN/CSS/style.css">
-    <link rel="stylesheet" href="/Proyecto-Final - HERNAN/CSS/normalize.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/normalize.css">
+    
 </head>
 <body>
     
@@ -32,25 +33,22 @@
         </article>
 
     <section id="nosotros">
-
+<!--2da seccion NOSOTROS, ocupa toda la pantalla, header fixed on top.-->
         <h2>Sobre Nostros</h2>
 
         <p class="LoremTestA"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius?</p>
 
         <article id="nosotros-grid">
 
-            <img src="/Proyecto-Final - HERNAN/img/GatoTest.webp" alt="" class="GatoTest">
+            <img src="/Proyecto-Final - HERNAN/img/GatoTest.webp" alt="GatoTest" class="GatoTest">
             <p class="LoremTest"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius?</p>
 
-            <img src="/Proyecto-Final - HERNAN/img/GatoTest.webp" alt="" class="GatoTest">
+            <img src="/Proyecto-Final - HERNAN/img/GatoTest.webp" alt="GatoTest" class="GatoTest">
             <p class="LoremTest"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius?</p>
 
-            <img src="/Proyecto-Final - HERNAN/img/GatoTest.webp" alt="" class="GatoTest">
+            <img src="/Proyecto-Final - HERNAN/img/GatoTest.webp" alt="GatoTest" class="GatoTest">
             <p class="LoremTest"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius? Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem nesciunt deserunt ad quasi doloremque alias id aut accusamus quidem ex ipsa maxime nobis saepe obcaecati fuga omnis, quia eius?</p>
 
-<!--2da seccion NOSOTROS, ocupa toda la pantalla, header fixed on top.
-
-Aca va una descripcion mas completa de la empresa,  un poco de historia "desde 1995 estamos....", Puede aparecer foto de los socios/fundadores con nombre cargo y titulo y alguna frase inspiadora/vendedora de cada uno. -->
         </article>
     </section>
 
@@ -412,7 +410,7 @@ Aca va una descripcion mas completa de la empresa,  un poco de historia "desde 1
 
                 <div class="Soporte">
                     <label for="Soporte">
-                    <img src="/Proyecto-Final - HERNAN/img/Soporte Cooler Indoor.webp" alt="..."> <br>
+                    <img src="/Proyecto-Final - HERNAN/img/Soporte Cooler Indoor.webp" alt="..."> <hr> <br>
                         <p>Soporte Cooler Indoor 4 (+US$ 11.77)</p>
                         <input type="checkbox" name="accesorio" id="Soporte" value="Soporte">
                     </label>
@@ -443,8 +441,8 @@ Aca va una descripcion mas completa de la empresa,  un poco de historia "desde 1
     <form class="formulario" action="" method="" id="formulario"> <!--Cambiar id por formulario idem class-->
 
         <h3>Presupuesto N°: <spam id="presupuesto_nro"></spam></h3> 
-        <h3>Monto estimado: <spam id="your-upgrade"></spam>
-        <h3>Valor dolar oficial: US$  <spam id="detalleDolar"></spam> (impuestos ya calculados)</h3>
+        <h3>* Monto total en AR$: <spam id="your-upgrade"></spam>
+        <h3>Valor dolar oficial: US$ <spam id="detalleDolar"></spam> (impuestos ya calculados)</h3>
 
             <label for ="nombre"> Nombre:</label>
             <input  type="text" name="nombre" placeholder=" Harry" id="nombre">
@@ -470,9 +468,9 @@ Aca va una descripcion mas completa de la empresa,  un poco de historia "desde 1
 </div>
 
 <div class="cons">
-    <label for ="contacto"> Medio de consulta </label>
+    <label for ="medio-contacto"> Medio de consulta </label>
 
-    <select name="contacto" id="contacto" >
+    <select name="medio-contacto" id="medio-contacto" >
 
             <option value="">Seleciona la opcion correspondiente</option>
             <option value="Whatsapp" minlength="8" maxlength="15" >Whatsapp</option>
@@ -543,7 +541,7 @@ Aca va una descripcion mas completa de la empresa,  un poco de historia "desde 1
         </nav>
     </footer>
 
-<script src="/Proyecto-Final - HERNAN/JS/main.js"></script>
+<script src="./JS/main.js"></script>
 <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
 </html>
