Unificacion de codigo
Unifico código para hacer la web responsive que hizo Daniel con el código de la rama main.

--- a/Proyecto-Final - HERNAN/index.html
+++ b/Proyecto-Final - HERNAN/index.html
@@ -510,7 +510,7 @@
 
     <article class="formulario_contacto">
 
-    <form class="formulario" action="" method="" id="formulario"> <!--Cambiar id por formulario idem class-->
+    <form class="formulario" action="" method="get" id="formulario"> <!--Cambiar id por formulario idem class-->
 
         <h3>Presupuesto N°: <spam id="presupuesto_nro"></spam></h3> 
         <h3>* Monto total en AR$: <spam id="your-upgrade"></spam>
