--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@
         </nav> 
          
         <nav class="footer-navbar"> <!--Falta agregar los links correctos para legales-->
-            <a href="index.html" class="nav-link">| Aviso Legal |</a>
-            <a href="#nosotros" class="nav-link">| Politicas de privacidad |</a>
-            <a href="#productos" class="nav-link">| Uso de cookies |</a> 
+            <a href="./legales.html" class="nav-link">| Aviso Legal |</a>
+            <a href="./privacidad.html" class="nav-link">| Politicas de privacidad |</a>
+            <a href="./cookies.html" class="nav-link">| Uso de cookies |</a> 
         </nav>
         <br>
         <p id="copyright">Copyright © 2022 Arma.Tu.PC Todos los derechos reservados</p>
